<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/animalImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/animalImage"
        app:srcCompat="@drawable/app_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/animalName"
            style="@style/ListDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintAnimalName" />

        <TextView
            android:id="@+id/animalSciName"
            style="@style/ListDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hintAnimalSciName" />
    </LinearLayout>

</LinearLayout>